<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.csi</groupId>
	<artifactId>csi</artifactId>
	<version>1.7.0</version>
	<name>Cornell Spectrum Imager</name>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<targetPath>.</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/src/</directory>
				<includes>
					<include>IJ_Props.txt</include>
					<include>macros/*.txt</include>
					<include>macros/*.ijm</include>
					<include>macros/toolsets/CSI.txt</include>
					<include>macros/toolsets/CSI4D.txt</include>
					<include>images/CSI_prism.gif</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>ij.ImageJ</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<id>l4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>console</headerType>
							<outfile>target/csi-v170.exe</outfile>
							<jar>target/csi-v170.jar</jar>
							<errTitle>csi</errTitle>
							<classPath>
								<mainClass>ij.ImageJ</mainClass>
								<addDependencies>true</addDependencies>
								<preCp>anything</preCp>
							</classPath>
							<jre>
								<minVersion>1.7.0</minVersion>
								<opts>
									<opt>-Djava.endorsed.dirs=./endorsed</opt>
								</opts>
							</jre>
							<versionInfo>
								<fileVersion>1.2.3.4</fileVersion>
								<txtFileVersion>txt file version?</txtFileVersion>
								<fileDescription>a description</fileDescription>
								<copyright>my copyright</copyright>
								<productVersion>4.3.2.1</productVersion>
								<txtProductVersion>txt product version</txtProductVersion>
								<productName>CSI</productName>
								<internalName>ccne</internalName>
								<originalFilename>original.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>sh.tak.appbundler</groupId>
				<artifactId>appbundle-maven-plugin</artifactId>
				<version>1.0.4</version>
				<configuration>
					<mainClass>ij.ImageJ</mainClass>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>bundle</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.ujmp</groupId>
			<artifactId>ujmp-core</artifactId>
			<version>0.3.0</version>
		</dependency>
		<dependency>
			<groupId>gov.nist.math</groupId>
			<artifactId>jama</artifactId>
			<version>1.0.3</version>
		</dependency>
	</dependencies>
</project>
